Cambio de usuario de base de datos y vinculacion de estilo y script

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <title>Dual CESUR</title>
 </head>
 <body>
     <h1>Bienvenido al sistema de gestión Dual CESUR</h1>
+    <script th:src="@{/js/main.js}"></script>
 </body>
 </html>
