--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <title>Dual CESUR</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Practice Dashboard</title>
 </head>
 <body>
-    <h1>Bienvenido al sistema de gestión Dual CESUR</h1>
-    <script th:src="@{/js/main.js}"></script>
+<div class="container">
+    <div class="header">
+        <img src="logo.png" alt="CESUR Logo">
+        <div class="title">
+            <h1>CESUR</h1>
+            <p>Tu Centro Oficial de FP</p>
+        </div>
+    </div>
+    <div class="filters">
+        <div class="filter-item">
+            <label for="task-filter">Nombre de la tarea</label>
+            <select id="task-filter">
+                <option value="all">Todas</option>
+                <option value="dual">Dual</option>
+                <option value="fct">FCT</option>
+            </select>
+        </div>
+        <div class="filter-item">
+            <label for="date-filter">Filtrar por fecha</label>
+            <input type="date" id="date-filter">
+        </div>
+        <div class="filter-item">
+            <label for="tutor-filter">Tutor Practicas:</label>
+            <select id="tutor-filter">
+                <option value="all">Nombre del tutor</option>
+            </select>
+        </div>
+        <div class="filter-item">
+            <label for="company-filter">Empresa asignada:</label>
+            <select id="company-filter">
+                <option value="all">Nombre de la Empresa</option>
+            </select>
+        </div>
+    </div>
+    <div class="dashboard">
+        <div class="progress">
+            <div class="dual-progress">
+                <p>25/600 horas Dual Completadas</p>
+                <div class="progress-bar">
+                    <div class="completed-progress" style="width: 50%;"></div>
+                </div>
+            </div>
+            <div class="fct-progress">
+                <p>25/600 horas FCT Completadas</p>
+                <div class="progress-bar">
+                    <div class="completed-progress" style="width: 50%;"></div>
+                </div>
+            </div>
+        </div>
+        <table>
+            <thead>
+            <tr>
+                <th>Actividad</th>
+                <th>Tipo Practica</th>
+                <th>Fecha</th>
+                <th>Nombre del Alumno</th>
+                <th>Horas</th>
+                <th></th>
+                <th>Observaciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td colspan="7">
+                    <p>Tabla sin contenido</p>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
 </html>
