--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,8 +16,8 @@
         <img th:src="@{/img/cabecera-login.png}" alt="Titulo de Cesur" />
         <h1>Login</h1>
         <form method="post">
-            <input type="email" placeholder="Usuario"/>
-            <input type="password" placeholder="Contraseña"/>
+            <input type="email" placeholder="Usuario" name="email"/>
+            <input type="password" placeholder="Contraseña" name="password"/>
             <button th:onclick="@{/web/login}">Iniciar Sesión</button>
         </form>
     </main>
