--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <link rel="stylesheet" th:href="@{/css/login-style.css}">
 </head>
 <body>
 <aside>
@@ -15,9 +15,10 @@
     <main>
         <img th:src="@{/img/cabecera-login.png}" alt="Titulo de Cesur" />
         <h1>Login</h1>
+        <p th:if="${error}" class="error-message" th:text="${error}"></p>
         <form th:action="@{/web/login}" method="post">
-            <input type="text" name="email" placeholder="email" />
-            <input type="password" name="password" placeholder="password" />
+            <input type="text" name="email" placeholder="Usuario" />
+            <input type="password" name="password" placeholder="Contraseña" />
             <button type="submit">Login</button>
         </form>
     </main>
