--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,37 +1,60 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    background: linear-gradient(to bottom right, #002859, #30526d);
+    margin: 0px;
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+.folio{
+    width: 75%;
+    min-width: 600px;
+    height: 100%;
+    background-color: #f6f4ec;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    align-items: center;
+    justify-content: top;
 }
-
-.header {
+img{
+    height: 140px;
+    width: auto;
+}
+.header{
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
+    justify-content: space-between;
+    padding: 0%;
+    margin-top: 20px;
+    width: 100%;
+    margin-bottom: 50px;
 }
 
-.header img {
+.title, .perfil{
+    display: flex;
+}
+
+.perfil{
+    align-items: center;
+    margin-right: 30px;
+}
+
+.perfil img{
     height: 100px;
-    margin-right: 20px;
+    border-radius: 40px;
+    border:solid 8px #002859;
+    margin-right: 10px;
 }
-.title {
-    margin-left: 20px;
-}
-
 .filters {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 30px;
+    justify-content: center;
+    width: 100%;
 }
 
 .filter-item {
@@ -40,7 +63,7 @@ body {
 }
 
 select,
-input[type="date"] {
+input {
     padding: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -48,15 +71,11 @@ input[type="date"] {
     width: 100%;
 }
 
-.dashboard {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .progress {
     width: 100%;
     margin-right: -20px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
+    display: flex;
 }
 
 .dual-progress,
@@ -90,6 +109,7 @@ input[type="date"] {
 table {
     width: 100%;
     border-collapse: collapse;
+    background-color: #fff;
 }
 
 th,
