--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
         <form th:action="@{/web/login}" method="post">
             <input type="text" name="email" placeholder="Usuario" />
             <input type="password" name="password" placeholder="Contraseña" />
-            <button type="submit">Login</button>
+            <button type="submit">Iniciar Sesión</button>
         </form>
     </main>
     <footer>
