Html de profesor y empresa

--- a/src/main/resources/templates/enterprise.html
+++ b/src/main/resources/templates/enterprise.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html>
 
+<body>
+<h2>Nombre de la empresa o Ubicacion</h2>
+
+<label for="nombre">Nombre de la Empresa:</label>
+<p id="nombre"></p>
+
+<label for="email">Email:</label>
+<p id="email"></p>
+
+<label for="observaciones">Observaciones:</label>
+<p id="observaciones"></p>
+
+<label for="telefono">Telefono:</label>
+<p id="telefono"></p>
+
+<label for="responsable">Responsable:</label>
+<p id="responsable"></p>
+
+<label for="ubicacion">Ubicacion:</label>
+<p id="ubicacion"></p>
 </body>
+
 </html>
