--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html>
 
+<body>
+<form>
+    <img src="path/to/image.jpg" alt="imagen profe" class="profile-image">
+
+    <p></p>
+
+    <label for="nombre">Nombre:</label><br>
+    <p id="nombre"></p>
+
+    <label for="apellido">Apellido:</label><br>
+    <p id="apellido"></p>
+
+    <label for="email">Email:</label><br>
+    <p id="email"></p>
+</form>
 </body>
+
 </html>
