--- a/src/main/resources/templates/teacher.html
+++ b/src/main/resources/templates/teacher.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
 
-<body>
+<body th:with="alumno=${session.alumno}">
 <form>
-    <img src="path/to/image.jpg" alt="imagen profe" class="profile-image">
+    <img th:src="${alumno.getTeacher().getImage()}"alt="imagen profe" class="profile-image">
 
     <p></p>
 
     <label for="nombre">Nombre:</label><br>
-    <p id="nombre"></p>
+    <p id="nombre">
+    <h2 th:text="${alumno.getTeacher().getName()}"></h2>
+    </p>
 
     <label for="apellido">Apellido:</label><br>
-    <p id="apellido"></p>
+    <p id="apellido">
+    <h2 th:text="${alumno.getTeacher().getLastName()}"></h2>
+    </p>
 
     <label for="email">Email:</label><br>
-    <p id="email"></p>
+    <p id="email">
+    <h2 th:text="${alumno.getTeacher().getEmail()}"></h2>
+    </p>
 </form>
 </body>
 
