--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -13,7 +13,7 @@
 </aside>
 <main>
     <h1>Añadir actividad:</h1>
-    <form method="post" th:action="@{}">
+    <form method="post" th:action="@{/save}">
         <div class="campos">
 
             <div class="campo">
