boton a edit and show añadido

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -75,7 +75,7 @@
 
         </tbody>
     </table>
-    <button th:onclick="@{/task/taskEdit}">Crear Actividad</button>
+    <button th:onclick="@{/taskEdit}" role="button">Crear Actividad</button>
 </div>
 </body>
 </html>
