Boton crea actividad

--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -18,24 +18,24 @@
 
             <div class="campo">
                 <label for="horas">Horas realizadas</label>
-                <input type="number" name="horas" id="horas" value="0" min="0" />
+                <input type="number" name="hoursDone" id="horas" value="0" min="0" />
 
                 <label for="fecha">Fecha:</label>
-                <input type="date" name="fecha" id="fecha" />
+                <input type="date" name="date" id="fecha" />
 
                 <label for="titulo">Actividad Realizada:</label>
-                <input type="text" name="titulo" id="titulo" />
+                <input type="text" name="name" id="titulo" />
             </div>
 
             <div class="campo">
                 <label for="tipos">Tipo:</label>
-                <select id="tipos" name="tipo">
+                <select id="tipos" name="practiceKind">
                     <option value="fct">FCT</option>
                     <option value="dual">Dual</option>
                 </select>
 
                 <label for="observacion">Observaciones:</label>
-                <textarea name="observacion" id="observacion"></textarea>
+                <textarea name="observations" id="observacion"></textarea>
             </div>
 
         </div>
