Mejoras visuales he implementación básica de ViewInfoController

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
     <div class="filters">
         <div class="filter-item">
             <label for="task-filter">Nombre de la tarea:</label>
-            <input type="search" />
+            <input type="search" placeholder="Escribe el titulo aquí..."/>
         </div>
 
         <div class="filter-item">
