--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <aside>
-    <img th:src="@{/img/cabecera-login.png}" alt="Logo de Cesur" />
+    <img th:src="@{/img/logo.png}" alt="Logo de Cesur" />
     <p>Sistema de Gestión Dual</p>
 </aside>
 <main>
