--- a/src/main/resources/static/css/index-style.css
+++ b/src/main/resources/static/css/index-style.css
@@ -43,6 +43,21 @@ img{
     margin-right: 30px;
 }
 
+.infoPerfil div{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info{
+    width: 100%;
+}
+
+.crearbtn{
+    margin-top: 30px;
+}
+
 .perfil img{
     height: 100px;
     border-radius: 40px;
@@ -151,7 +166,6 @@ td:last-child {
     }
 }
 button {
-    margin-top: 30px;
     padding: 15px;
     border-radius: 20px;
     border: solid 3px #002859;
