--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" th:href="@{/css/style-main.css}" />
+    <link rel="stylesheet" th:href="@{/css/index-style.css}" />
     <title>Main</title>
 </head>
 <body th:with="alumno=${session.alumno}">
@@ -19,10 +19,12 @@
         <div class="perfil">
 
             <img th:src="@{/img/Francisco-Romero.jpg}" alt="logo de cesur" />
-            <div> <h2 th:text="${alumno.getName()+' '+alumno.getLastName()}"></h2>
+            <div class="infoPerfil">
+            <h2 th:text="${alumno.getName()+' '+alumno.getLastName()}"></h2>
                 <a th:href="@{/info}">
-                    <button>Info</button>
-                </a></div>
+                    <button class="info">Info</button>
+                </a>
+            </div>
 
         </div>
     </div>
@@ -81,7 +83,7 @@
         </tbody>
     </table>
     <form th:action="@{/taskEdit}" method="get">
-        <button type="submit">Crear Actividad</button>
+        <button class="crearbtn" type="submit">Crear Actividad</button>
     </form>
 
 </div>
