--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -41,6 +41,7 @@
         </div>
 
         <button type="submit">Guardar</button>
+        <button type="submit">Eliminar</button>
     </form>
         <form th:action="@{/backwards}" method="get">
             <button type="submit">Volver</button>
