--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -21,7 +21,7 @@
                 <input type="number" name="hoursDone" id="horas" value="0" min="0" />
 
                 <label for="fecha">Fecha:</label>
-                <input type="date" name="date" id="fecha" th:value="${#dates.format(t.date, 'yyyy-MM-dd')}" />
+                <input type="date" name="date" id="fecha" >
 
                 <label for="titulo">Actividad Realizada:</label>
                 <input type="text" name="name" id="titulo"/>
@@ -45,9 +45,9 @@
             <button type="submit">Eliminar</button>
         </form>
     </form>
-        <form th:action="@{/backwards}" method="get">
-            <button type="submit">Volver</button>
-        </form>
+    <form th:action="@{/backwards}" method="get">
+        <button type="submit">Volver</button>
+    </form>
 
 </main>
 </body>
