--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -72,13 +72,13 @@
         </tr>
         </thead>
         <tbody>
-       <a th:each="task : ${alumno.getTaskList()}" th:href="@{/taskEdit}" > <tr>
+        <tr th:each="task : ${alumno.getTaskList()}" th:data-taskId="${task.getId()}" th:onclick="'redirectToTaskEdit('+${task.id}+')'" style="cursor: pointer;">
             <td th:text="${task.name}"></td>
             <td th:text="${task.practiceKind}"></td>
             <td th:text="${task.date}"></td>
             <td th:text="${task.hoursDone}"></td>
             <td th:text="${task.observations}"></td>
-        </tr> </a>
+        </tr>
 
         </tbody>
     </table>
@@ -87,7 +87,11 @@
     </form>
 
 </div>
-
+<script th:inline="javascript">
+    function redirectToTaskEdit(taskId) {
+        window.location.href = '/taskEdit?id=' + taskId;
+    }
+</script>
 </body>
 
 </html>
