--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" th:href="@{/css/index-style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/main-style.css}"/>
     <title>Main</title>
 </head>
 <body th:with="alumno=${session.alumno}">
@@ -25,8 +25,8 @@
                     <a style="margin-right: 15px" th:href="@{/info}">
                         <button class="info">Info</button>
                     </a>
-                    <a th:href="@{/info}">
-                        <button class="info">Logout</button>
+                    <a th:href="@{/main/logout}">
+                        <button class="info btnLogout">Logout</button>
                     </a>
                 </div>
             </div>
