--- a/src/main/resources/templates/editAndShow.html
+++ b/src/main/resources/templates/editAndShow.html
@@ -13,7 +13,7 @@
 </aside>
 <main>
     <h1>Añadir actividad:</h1>
-    <form method="post" th:action="${actividad.getId() != null ? '/update' : '/save'}">
+    <form method="post" th:action="${actividad.getId() != null ? '/update/'+actividad.getId() : '/save'}">
         <div class="campos">
 
             <div class="campo">
